--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-custom": "^1.0.5",
     "sequelize": "^3.3.2",
     "sequelize-cli": "^1.7.1",
     "serve-favicon": "~2.3.0",
