--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "jade": "~1.11.0",
+    "moment": "^2.13.0",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-custom": "^1.0.5",
