--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "envify": "^1.2.1",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "jade": "~1.11.0",
@@ -20,6 +21,8 @@
     "passport": "^0.3.2",
     "passport-custom": "^1.0.5",
     "pg": "^4.5.5",
+    "react": "^0.10.0",
+    "react-forms": "^0.5.7",
     "sequelize": "^3.3.2",
     "sequelize-cli": "^1.9.2",
     "serve-favicon": "~2.3.0",
