--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "jade": "~1.11.0",
+    "jade-babel": "^5.0.0",
     "moment": "^2.13.0",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
