--- a/package.json
+++ b/package.json
@@ -3,40 +3,29 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "npm run test-unit && npm run test-integration",
-    "test-unit": "mocha test/unit/*.test.js",
-    "test-integration": "mocha test/integration/*.test.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "babel-core": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
-    "body-parser": "~1.13.2",
-    "browserify-middleware": "^7.0.0",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "envify": "^1.2.0",
-    "express": "~4.13.1",
-    "express-session": "^1.13.0",
-    "jade": "~1.11.0",
+    "body-parser": "^1.15.2",
+    "browserify-middleware": "^7.1.0",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.2.0",
+    "envify": "^3.4.1",
+    "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "jade-babel": "^5.0.0",
-    "moment": "^2.13.0",
-    "morgan": "~1.6.1",
+    "moment": "^2.15.1",
     "passport": "^0.3.2",
     "passport-custom": "^1.0.5",
-    "pg": "^4.5.5",
-    "react": "^0.14.0",
-    "sequelize": "^3.3.2",
-    "sequelize-cli": "^1.9.2",
-    "serve-favicon": "~2.3.0",
-    "sqlite3": "^3.0.8"
-  },
-  "devDependencies": {
-    "bluebird": "^2.9.33",
-    "expect.js": "^0.3.1",
-    "mocha": "^2.2.5",
-    "supertest": "^1.0.1"
+    "pg": "^6.1.0",
+    "pug": "^2.0.0-beta6",
+    "react": "^15.3.2",
+    "sequelize": "^3.24.3",
+    "sequelize-cli": "^2.4.0",
+    "sqlite3": "^3.1.4"
   }
 }
