--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "browserify-middleware": "^7.1.0",
     "cookie-parser": "^1.4.3",
