specified node version

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "sequelize": "^3.24.3",
     "sequelize-cli": "^2.4.0",
     "sqlite3": "^3.1.9"
+  },
+  "engines": {
+    "node": "8.1.4"
   }
 }
