--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "^6.1.0",
     "pug": "^2.0.0-beta6",
     "react": "^15.3.2",
+    "request": "^2.83.0",
     "sequelize": "^3.24.3",
     "sequelize-cli": "^2.4.0",
     "sqlite3": "^3.1.9"
