--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "envify": "^3.4.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "flatten-array": "^1.0.0",
+    "ipaddr": "0.0.9",
     "jade-babel": "^5.0.0",
     "moment": "^2.15.1",
     "passport": "^0.3.2",
@@ -26,6 +28,7 @@
     "pg": "^6.1.0",
     "pug": "^2.0.0-beta6",
     "react": "^15.3.2",
+    "request": "^2.83.0",
     "sequelize": "^3.24.3",
     "sequelize-cli": "^2.4.0",
     "sqlite3": "^3.1.9"
