--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cookie-parser": "^1.4.3",
     "debug": "^2.2.0",
     "envify": "^3.4.1",
-    "express": "^4.14.0",
+    "express": "^4.16.2",
     "express-session": "^1.14.1",
     "flatten-array": "^1.0.0",
     "ipaddr": "0.0.9",
@@ -29,6 +29,7 @@
     "pug": "^2.0.0-beta6",
     "react": "^15.3.2",
     "request": "^2.83.0",
+    "require": "^2.4.20",
     "sequelize": "^3.24.3",
     "sequelize-cli": "^2.4.0",
     "sqlite3": "^3.1.9"
