--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "envify": "^3.4.1",
     "express": "^4.16.2",
     "express-session": "^1.14.1",
-    "flatten-array": "^1.0.0",
     "ipaddr": "0.0.9",
     "jade-babel": "^5.0.0",
     "moment": "^2.15.1",
@@ -35,6 +34,6 @@
     "sqlite3": "^3.1.9"
   },
   "engines": {
-    "node": "8.1.4"
-  }
+    "node": "8.1.4",
+    "npm": "5.4.2"
 }
