--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.15.2",
     "browserify-middleware": "^7.1.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "debug": "^2.2.0",
     "envify": "^3.4.1",
     "express": "^4.16.2",
