--- a/compose.yml
+++ b/compose.yml
@@ -25,7 +25,7 @@ services:
       LOGIN_FRONTEND_URL: http://localhost:7002
       LOGIN_KEY: 1234567890abcdef
       HIVE_URL: http://login:7004/api/v1
-      HIVE_API_KEY: http://login:7004
+      HIVE_API_KEY: aaaa
     volumes:
       - ./:/app
     ports:
