--- a/compose.yml
+++ b/compose.yml
@@ -13,7 +13,7 @@ services:
       interval: 3s
       timeout: 3s
       retries: 5
-        
+
   node:
     tty: true
     build: .
@@ -21,13 +21,20 @@ services:
       SESSION_SECRET: "asdf"
       NODE_ENV: development
       DATABASE_URL: postgresql://postgres:pass123@db:5432/dfunkt
-      LOGIN_API_URL: "http://login:7002" 
+      LOGIN_API_URL: "http://login:7002"
       LOGIN_FRONTEND_URL: http://localhost:7002
       LOGIN_KEY: 1234567890abcdef
       HIVE_URL: http://login:7004/api/v1
       HIVE_API_KEY: aaaa
+    volumes:
+      - ./views:/app/views
+      - ./routes:/app/routes
+      - ./public:/app/public
+      - ./config:/app/config
+      - ./models:/app/models
+      - ./util:/app/util
     ports:
-      - "5000:5000"
+      - "3000:5000"
     depends_on:
       db:
         condition: service_healthy
