--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,28 @@
 services:
+  node:
+    tty: true
+    build:
+      dockerfile: Dockerfile.dev
+    environment:
+      SESSION_SECRET: "asdf"
+      NODE_ENV: development
+      DATABASE_URL: postgresql://postgres:pass123@db:5432/dfunkt
+      LOGIN_KEY: 1234567890abcdef
+      HIVE_URL: http://nyckeln:7004/api/v1
+      HIVE_API_KEY: aaaa
+      OIDC_PROVIDER: http://localhost:7003
+      OIDC_ID: client-id
+      OIDC_SECRET: client-secret
+      REDIRECT_URL: http://localhost:5000/login/callback
+    configs:
+      - source: nginx.conf
+        target: /etc/nginx/nginx.conf
+    ports:
+      - "5000:5000"
+    depends_on:
+      db:
+        condition: service_healthy
+
   db:
     image: postgres:15.6
     environment:
@@ -13,46 +37,38 @@ services:
       interval: 3s
       timeout: 3s
       retries: 5
-        
-  node:
-    tty: true
-    build: .
-    environment:
-      SESSION_SECRET: "asdf"
-      NODE_ENV: development
-      DATABASE_URL: postgresql://postgres:pass123@db:5432/dfunkt
-      LOGIN_API_URL: "http://login:7002" 
-      LOGIN_FRONTEND_URL: http://localhost:7002
-      LOGIN_KEY: 1234567890abcdef
-      HIVE_URL: http://login:7004/api/v1
-      HIVE_API_KEY: aaaa
-    ports:
-      - "5000:5000"
-    depends_on:
-      db:
-        condition: service_healthy
 
-  login:
+  nyckeln:
     image: ghcr.io/datasektionen/nyckeln-under-dorrmattan
     configs:
       - source: nyckeln.yaml
         target: /config.yaml
     ports:
-      - 7001:7001
-      - 7002:7002
+      - 7003:7003
       - 7004:7004
 
 configs:
+  nginx.conf:
+    content: |
+      events {}
+
+      http {
+        server {
+          listen 7003;
+
+          location / {
+            proxy_pass http://nyckeln:7003;
+          }
+        }
+      }
+
   nyckeln.yaml:
     content: |
       clients:
-        - id: "client-id" # use this in your oidc client
-          secret: "client-secret" # use this in your oidc client
-          redirect_uris: # URIs of your oidc client
-            [
-              "http://localhost:4000/oidcc/callback",
-              "http://localhost:4000/oidcc/authorize",
-            ]
+        - id: client-id
+          secret: client-secret
+          redirect_uris:
+            - http://localhost:5000/login/callback
 
       users:
         - ug_kth_id: some-id
@@ -75,4 +91,3 @@ configs:
               - id: mandate
             permissions:
               - id: admin
-                scope: null
