--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-fetch": "^2.7.0",
     "passport": "^0.3.2",
     "passport-custom": "^1.0.5",
+    "passport-openidconnect": "^0.1.2",
     "pg": "^7.9.0",
     "pug": "^2.0.0-beta6",
     "react": "^15.3.2",
